learn GC日志